--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ thinc-apple-ops = "^1.0.0"
 cdlib = "^0.4.0"
 igraph = "^0.11.8"
 leidenalg = "^0.10.2"
+tqdm = "^4.66.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
