--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = ""
 authors = ["sdiehl <stephen.m.diehl@gmail.com>"]
 readme = "README.md"
 license = "MIT"
-package-mode = false
+packages = [
+    { include = "tiny_graphrag", from = "src" },
+]
+
+[tool.poetry.scripts]
+graphrag = "tiny_graphrag.example:main"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
