--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ igraph = "^0.11.8"
 leidenalg = "^0.10.2"
 tqdm = "^4.66.6"
 termcolor = "^2.5.0"
+neo4j = "^5.26.0"
 
 [tool.poetry.group.apple]
 optional = true
